--- a/style.css
+++ b/style.css
@@ -1,4 +1,122 @@
-.winner 
-{
-    color:green;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+}
+body {
+    background: url();
+}
+.winner {
+    color: green;
+}
+
+.container {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(17, 7, 56, 1) 0%,
+        rgba(68, 11, 11, 1) 100%
+    );
+    height: 100vh;
+    padding: 30px;
+}
+
+.inner-container {
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.3);
+    height: 90vh;
+    text-align: center;
+}
+.score {
+    background: rgba(0, 0, 0, 0.266);
+}
+
+#p1display {
+    color: rgb(0, 93, 180);
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    text-shadow: 4px 2px 5px black;
+}
+#p1display:hover {
+    text-shadow: 5px 5px 5px black;
+}
+
+#p2display {
+    color: rgba(228, 21, 21, 0.733);
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    text-shadow: 4px 2px 5px black;
+}
+#p1display:hover {
+    text-shadow: 5px 5px 5px black;
+}
+
+.score h1 {
+    text-align: center;
+    font-size: 130px;
+}
+p {
+    font-size: 50px;
+    text-align: center;
+    margin: 20px 0 0 5px;
+}
+p span {
+    color: white;
+    font-weight: 400;
+}
+.input {
+    width: 170px;
+    height: 25px;
+    font-size: 15px;
+    border: none;
+    box-shadow: 2px 2px 5px black;
+    margin: 0 auto;
+    margin: 2px 10px 20px 10px;
+    padding: 3px;
+}
+.player-button {
+    margin-top: 75px;
+}
+
+#p1,
+#p2 {
+    width: 40%;
+    height: 120px;
+    font-size: 30px;
+    border: none;
+    margin: 5px;
+    color: white;
+    background: rgb(22, 22, 22);
+}
+
+#p1 {
+    box-shadow: 5px 5px 10px rgb(0, 93, 180);
+}
+
+#p1:hover {
+    background-color: rgb(2, 63, 121);
+    box-shadow: 5px 5px 10px black;
+    transition: 0.2s;
+}
+
+#p2 {
+    box-shadow: 5px 5px 10px rgba(228, 21, 21, 0.76);
+}
+#p2:hover {
+    background-color: rgb(121, 2, 2);
+    box-shadow: 5px 5px 10px black;
+    transition: 0.2s;
+}
+
+#reset {
+    width: 250px;
+    height: 50px;
+    font-size: 20px;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    border: none;
+}
+
+#reset:hover {
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.76);
 }
